docker/envoy.yaml
---
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          codec_type: AUTO
          route_config:
            name: local_route
            request_headers_to_add:
            - header:
                key: "x-auth-request-email"
                value: "cambrian@cambriancoder.me.uk"
            - header:
                key: "x-auth-request-user"
                value: "cambrian"
            - header:
                key: "x-auth-request-user-id"
                value: "cambriancoder"
            - header:
                key: "x-auth-request-groups"
                value: "people"
            response_headers_to_add:
            - header:
                key: "x-auth-request-email"
                value: "cambrian@cambriancoder.me.uk"
            - header:
                key: "x-auth-request-user"
                value: "cambrian"
            - header:
                key: "x-auth-request-user-id"
                value: "cambriancoder"
            - header:
                key: "x-auth-request-groups"
                value: "people"
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/dex/" }
                route: { cluster: dex }
              - match: { prefix: "/" }
                route: { cluster: some_service }
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                    disabled: true
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  uri: ext-authz:8888
                  cluster: ext-authz
                  timeout: 0.25s
                authorization_request:
                  headers_to_add:
                  - key: "x-auth-request-user"
                    value: "cambrian"
                  - key: "x-auth-request-user-id"
                    value: "cambriancoder"
                  - key: "x-auth-request-email"
                    value: "cambrian@cambriancoder.me.uk"
                  - key: "x-auth-request-groups"
                    value: "people"
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: "x-auth-request-user"
                      ignore_case: true
                    - exact: "x-auth-request-email"
                      ignore_case: true
                    - exact: "x-auth-request-user-id"
                      ignore_case: true
                    - exact: "x-auth-request-groups"
                      ignore_case: true
                  allowed_upstream_headers_to_append:
                    patterns:
                    - exact: "x-auth-request-user"
                      ignore_case: true
                    - exact: "x-auth-request-email"
                      ignore_case: true
                    - exact: "x-auth-request-user-id"
                      ignore_case: true
                    - exact: "x-auth-request-groups"
                      ignore_case: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            

  clusters:
  - name: some_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 5173
  - name: dex
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: dex
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dex
                port_value: 5556

  - name: ext-authz
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 8888
